--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/gallery.js"></script>
   </head>
 
-  <body>
+  <body onload="setTabFocus()">
     <div id="image">Hover over an image below to display here.</div>
 
     <img
